src/test/deca/context/valid/decl_class_valid.deca
// Test de la règle (1.3) : déclaration valide d'une classe
// i.e. la déclaration respecte les deux conditions :
//  - la classe n'est pas déjà définie
//  - la super-classe existe

class A {
  // n'est pas déjà définie : OK
}

class B extends A {
  // la super-classe A est bien définie : OK
}

