src/test/deca/context/invalid/super_class_not_defined.deca
// Test la règle 1.3: la super classe utilisée n'existe pas.

class A extends Alien {
    int x = 5;
}

// Resultat:
//# RULE 1.3 DOIT S'AFFICHER
//# TODOTEST